improve order of folders

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <br>
     
 <ul>
-    <li><a href="./Variables And Data Types/index.html" target="_blank">Variables and Data Types</a></li>
+    <li><a href="./01_Variables And Data Types/index.html" target="_blank">Variables and Data Types</a></li>
 
-    <li><a href="./if-else Statements/index.html" target="_blank">if-else statements</a></li>
+    <li><a href="./02_if-else Statements/index.html" target="_blank">if-else statements</a></li>
 
-    <li><a href="./Nested if else/index.html" target="_blank">Nested if-else statements</a></li>
+    <li><a href="./03_Nested if else/index.html" target="_blank">Nested if-else statements</a></li>
 </ul>
 </body>
 </html>
