Even and Odd Program

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <li><a href="./02_if-else Statements/index.html" target="_blank">if-else statements</a></li>
 
     <li><a href="./03_Nested if else/index.html" target="_blank">Nested if-else statements</a></li>
+
+    <li><a href="./05_Even and Odd Checker/index.html" target="_blank">Even and Odd Checker</a></li>
 </ul>
 </body>
 </html>
