--- a/01_Variables And Data Types/index.html
+++ b/01_Variables And Data Types/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>JavaScript | Practice</title>
+  <title>JavaScript | Variables and Data Types</title>
 </head>
 
 <body>
