--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <li><a href="./03_Nested if else/index.html" target="_blank">Nested if-else statements</a></li>
 
     <li><a href="./05_Even and Odd Checker/index.html" target="_blank">Even and Odd Checker</a></li>
+
+    <li><a href="./06_Sorting in Array/index.html" target="_blank">Sorting in Array</a></li>
 </ul>
 </body>
 </html>
