swapping first & last element of array

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <li><a href="./05_Even and Odd Checker/index.html" target="_blank">Even and Odd Checker</a></li>
 
     <li><a href="./06_Sorting in Array/index.html" target="_blank">Sorting in Array</a></li>
+
+    <li><a href="./07_Swapping First and Last Element of Array/index.html" target="_blank">Swapping First and Last Element of Array</a></li>
 </ul>
 </body>
 </html>
